--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     height: 5px;
     background-color: rgb(78, 78, 78);
     border-radius: 17px;
-    border: 3px solid gray;
+    border: 3px solid #d4d0cd;
     top:-35px;
     left: 50%;
 }
@@ -42,7 +42,7 @@
     height: 5px;
     background-color: black;
     border-radius: 17px;
-    border: 3px solid gray;
+    border: 3px solid #d4d0cd;
     top:-35px;
     left: 23%;
 }
@@ -54,7 +54,7 @@
     height: 10px;
     background-color: black;
     border-radius: 17px;
-    border: 3px solid gray;
+    border: 3px solid #d4d0cd;
 }
 
 .notificaciones{
@@ -64,7 +64,7 @@
     height: 5px;
     background-color: rgb(14, 253, 233);
     border-radius: 12px;
-    border: 3px solid gray;
+    border: 3px solid #d4d0cd;
 }
 
 .audio{
