--- a/style.css
+++ b/style.css
@@ -70,12 +70,18 @@
     animation: efecto 1s infinite;
 }
 
-@keyframe efecto{
+@keyframes efecto{
     0%{
         opacity:0;
     }
+    25%{
+        opacity:0.25;
+    }
      50%{
         opacity:0.50;
+    }
+    75%{
+        opacity:0.75;
     }
      100%{
         opacity:1;
